--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "npx tailwindcss -i ./css/input.css -o ./css/style.css --watch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test:e2e": "cross-env NODE_ENV=test PLAYWRIGHT_TEST_BASE_URL=http://127.0.0.1:5500/index.html npx playwright test",
+    "test:unit": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@playwright/test": "^1.50.1",
+    "cross-env": "^7.0.3",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
